--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
+    "@types/nodemailer": "^7.0.1",
     "nodemon": "^3.1.10"
   }
 }
