--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
-    "pdf-parse": "^2.4.5",
+    "pdf-image": "^2.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.3",
+    "pdf2pic": "^3.2.0",
+    "sharp": "^0.34.5",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
