--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "amqplib": "^0.10.9",
     "axios": "^1.13.3",
     "axios-retry": "^4.5.0",
     "bcrypt": "^6.0.0",
@@ -29,6 +30,7 @@
     "pdf-parse": "^1.1.1",
     "pdf-poppler": "^0.2.3",
     "pdf2pic": "^3.2.0",
+    "redis": "^5.10.0",
     "sharp": "^0.34.5",
     "tesseract.js": "^6.0.1"
   },
