--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pdf2pic": "^3.2.0",
     "redis": "^5.10.0",
     "sharp": "^0.34.5",
+    "socket.io": "^4.8.3",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
